--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,12 @@ __pycache__
 # prerequisites for updating ChibiOS
 /util/fmpp*
 
+*.json
+lib/lcd_dprentice/.vs/slnx.sqlite
+lib/lcd_dprentice/.vs/lcd_dprentice/v15/ipch/AutoPCH/42e80196a3e44e7e/LCD_I2CMASTER.ipch
+lib/lcd_dprentice/.vs/lcd_dprentice/v15/Browse.VC.opendb
+lib/lcd_dprentice/.vs/lcd_dprentice/v15/Browse.VC.db
+lib/lcd_dprentice/.vs/lcd_dprentice/v15/.suo
+keyboards/ssopads/.vs/ssopads/v15/Browse.VC.opendb
+keyboards/ssopads/.vs/ssopads/v15/Browse.VC.db
+keyboards/ssopads/.vs/slnx.sqlite
