add new keymap for pro micro with LCD: base conv
new keymap: base_conv that adds a really cute hex-dec-bin converter to the numpad

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ lib/lcd_dprentice/.vs/lcd_dprentice/v15/.suo
 keyboards/ssopads/.vs/ssopads/v15/Browse.VC.opendb
 keyboards/ssopads/.vs/ssopads/v15/Browse.VC.db
 keyboards/ssopads/.vs/slnx.sqlite
+keyboards/ssopads/.vs/ssopads/v15/.suo
