--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ keyboards/ssopads/.vs/ssopads/v15/Browse.VC.opendb
 keyboards/ssopads/.vs/ssopads/v15/Browse.VC.db
 keyboards/ssopads/.vs/slnx.sqlite
 keyboards/ssopads/.vs/ssopads/v15/.suo
+keyboards/ssopads/.vs/ssopads/v15/ipch/AutoPCH/42dd41b19d6ca4bd/KEYMAP.ipch
