--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,6 @@ keyboards/ssopads/.vs/ssopads/v15/Browse.VC.db
 keyboards/ssopads/.vs/slnx.sqlite
 keyboards/ssopads/.vs/ssopads/v15/.suo
 keyboards/ssopads/.vs/ssopads/v15/ipch/AutoPCH/42dd41b19d6ca4bd/KEYMAP.ipch
+keyboards/ssopads/base_conv/.vs/slnx.sqlite
+keyboards/ssopads/base_conv/.vs/base_conv/v15/Browse.VC.opendb
+keyboards/ssopads/base_conv/.vs/base_conv/v15/Browse.VC.db
