add 2004 LCD keymap (WIP)

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@ keyboards/ssopads/.vs/ssopads/v15/ipch/AutoPCH/42dd41b19d6ca4bd/KEYMAP.ipch
 keyboards/ssopads/base_conv/.vs/slnx.sqlite
 keyboards/ssopads/base_conv/.vs/base_conv/v15/Browse.VC.opendb
 keyboards/ssopads/base_conv/.vs/base_conv/v15/Browse.VC.db
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/slnx.sqlite
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/Browse.VC.opendb
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/Browse.VC.db
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/base_conv2004/v15/Browse.VC.db
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/base_conv2004/v15/.suo
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/slnx.sqlite
