--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,9 @@ keyboards/ssopads/.vs/ssopads/v15/Browse.VC.db
 keyboards/ssopads/.vs/slnx.sqlite
 keyboards/ssopads/.vs/ssopads/v15/.suo
 keyboards/ssopads/.vs/ssopads/v15/ipch/AutoPCH/42dd41b19d6ca4bd/KEYMAP.ipch
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/slnx.sqlite
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/base_conv2004/v15/Browse.VC.db
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/base_conv2004/v15/.suo
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/slnx.sqlite
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/Browse.VC.opendb
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/Browse.VC.db
