--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/Browse.VC.db
 keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/base_conv2004/v15/Browse.VC.db
 keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/base_conv2004/v15/.suo
 keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/slnx.sqlite
+keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/.suo
