--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ keyboards/ssopads/ssopadpm1.2/keymaps/base_conv2004/.vs/slnx.sqlite
 keyboards/ssopads/ssopadpm1.2/keymaps/base_conv/.vs/base_conv/v15/.suo
 *.ipch
 *.sqlite-journal
+keyboards/ssopads/ssopadpm1.2/.vs/ssopadpm1.2/v15/Browse.VC.db
+keyboards/ssopads/ssopadpm1.2/.vs/ssopadpm1.2/v15/Browse.VC.opendb
+keyboards/ssopads/ssopadpm1.2/.vs/ssopadpm1.2/v15/.suo
+keyboards/ssopads/ssopadpm1.2/.vs/slnx.sqlite
